--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
                 <li>Experimentos</li>
                 <li>Proyectos</li>
                 <li>Bio</li>
+                <li><button id="button">Contacto</button></li>
             </ul>
         </div>
         <h1>Este es mi segundo intendo duhh</h1>
