--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
             <ul>
                 <li>Experimentos</li>
                 <li>Proyectos</li>
-                <li>Bio</li>
+                <li>Biografía</li>
                 <li><button id="button">Contacto</button></li>
             </ul>
         </div>
-        <h1>Este es mi segundo intendo duhh</h1>
+        <h1>Este es mi segundo intendo</h1>
         <p>Un pequeno blog que estoy creando</p>
         <span id="xd">XD</span>
         <div id="footer">
