se borro una palabra y se le agrego una imagen

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </div>
         <h1>Este es mi segundo intendo</h1>
         <p>Un pequeno blog que estoy creando</p>
-        <span id="xd">XD</span>
+        <img src="/img/Ano.jpg" id="image"/>
         <div id="footer">
             <h2 class="title">Dale milo</h2>
         </div>
